@@ -195,7 +195,7 @@ protected:
 	virtual bool FunctionTraceReturnImpl(int64_t& retval);
 
 	virtual int GetDyntransICshift() const;
-	virtual void (*GetDyntransToBeTranslated())(CPUDyntransComponent*, DyntransIC*);
+	virtual DyntransIC_t GetDyntransToBeTranslated();
 
 	virtual void ShowRegisters(GXemul* gxemul, const vector<string>& arguments) const;
 
