@@ -2,7 +2,7 @@
 #define	REFCOUNT_PTR_H
 
 /*
- *  Copyright (C) 2007-2018  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2007-2019  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -32,6 +32,8 @@
 template <class T>
 class refcount_ptr;
 
+
+#include <stddef.h>
 
 /**
  * \brief Base class for reference countable objects.
